# CS184FinalProject

./: README.md
FireworksSimVS/: CMakeLists.txt
FireworksSimVS/Shaders/: TexDefault.frag  TransDefault.frag
FireworksSimVS/Textures/: Thumbs.db
FireworksSimVS/builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FireworksSim.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
FireworksSimVS/builds/CGL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CGL.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
FireworksSimVS/builds/CGL/src/: CGL.vcxproj  CGL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
FireworksSimVS/builds/Debug/: fireworkssim.ilk
FireworksSimVS/builds/ext/nanogui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  NanoGUI.sln  cmake_install.cmake  nanogui-obj.vcxproj  nanogui-obj.vcxproj.filters  nanogui.vcxproj  nanogui.vcxproj.filters
FireworksSimVS/builds/ext/nanogui/ext_build/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
FireworksSimVS/builds/ext/nanogui/ext_build/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw_objects.vcxproj  glfw_objects.vcxproj.filters
FireworksSimVS/builds/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fireworkssim.vcxproj  fireworkssim.vcxproj.filters
FireworksSimVS/src/: CMakeLists.txt  CoordinatesTest.cpp  Firework.cpp  Firework.h  HelloTriangleTest.cpp  Main.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ShadersTest.cpp  Testing.h  TexturesTest.cpp  Utility.cpp  Utility.h
FireworksSimVS/src/Shaders/: CoordDefault.vert  Default.vert  TexDefault.vert
FireworksSimVS/src/Textures/: Thumbs.db
FirworkSimPlus/: FirworkSimPlus.sln
FirworkSimPlus/FirworkSimPlus/: Firework.cpp  Firework.h  FirworkSimPlus.vcxproj  FirworkSimPlus.vcxproj.filters  HelloTriangle.cpp  Main.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  Shader.cpp  Shader.h  Testing.h  TransformationsTest.cpp  Utility.cpp  Utility.h
FirworkSimPlus/FirworkSimPlus/Shaders/: Default.frag  Particle.frag  Particle.vert  TransDefault.vert
docs/: Thumbs.db  index.html  index_milestone.html
